<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/navItemHistory"
            android:checked="true"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/navItemZones"
            android:checked="true"
            android:icon="@drawable/ic_zone"
            android:title="@string/zones" />
        <item
            android:id="@+id/navItemSettings"
            android:checked="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/navItemAbout"
            android:checked="true"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>