<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ismet.parkingzonemaddevs.ui.history.EmptyItemViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/linearLayoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewEmpty"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/tv_message"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center"
            android:text="@string/empty_screen"
            android:textSize="24sp" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/please_retry" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"
            android:onClick="@{() -> viewModel.onRetryClick()}"
            android:text="@string/retry"
            android:textSize="20sp" />
    </LinearLayout>

</layout>