<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="com.ismet.parkingzonemaddevs.ui.park.ParkViewHolder"/>
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/park_here_question"
                android:layout_width="wrap_content"
                style="@style/TextStyle"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/parkingZoneName"
                style="@style/TextStyle"
                android:textSize="20sp"
                android:text="@{viewModel.parkingZoneName}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <Button
                    android:id="@+id/btnLater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:onClick="@{() -> viewModel.onCancelClick()}"
                    android:text="@string/cancel"/>

            <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="@{() -> viewModel.onSubmitClick()}"
                    android:text="@string/submit"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
</layout>