<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_50"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@android:color/transparent"
                android:tint="@color/grey_400"
                app:srcCompat="@drawable/ic_arrow_back"/>

        <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:text="@string/about"
                android:textColor="@color/grey_400"
                android:textSize="20sp"/>
    </LinearLayout>

    <TextView
            android:id="@+id/txt_heading"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autoLink="web"
            android:padding="20dp"
            android:text="@string/project_info"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
            android:id="@+id/tvLinkToRepo"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="20dp"
            android:text="@string/link_to_repo"/>
</LinearLayout>
